# smart_rss_feed

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  blueprint.md  checklist.md  config.yaml  project_spec.md  pyproject.toml  requirements.txt
data/: master_feed.xml
src/: app.py  clustering.py  embedding.py  formatter.py  grouping.py  ingest.py  llm_tagging.py  newsletter.py  newsletter_store.py  subscription.py  subscription_store.py  user.py  user_store.py  visualization.py  web_search.py
tests/: test_app_integration.py  test_clustering.py  test_embedding.py  test_formatter.py  test_grouping.py  test_ingest.py  test_newsletter.py  test_newsletter_store.py  test_subscription.py  test_subscription_store.py  test_user.py  test_user_store.py  test_web_search.py
