[project]
name = "smart-rss"
version = "0.1.0"
description = "Interact with your RSS feed using AI and data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.66.0",
    "beautifulsoup4>=4.13.5",
    "black>=25.1.0",
    "ddgs==9.5.5",
    "feedparser==6.0.11",
    "google-genai==1.33.0",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-core==0.3.75",
    "langchain-text-splitters==0.3.11",
    "lxml[html-clean]>=6.0.1",
    "matplotlib>=3.10.6",
    "newspaper3k==0.2.8",
    "openai>=1.106.1",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "pre-commit>=4.3.0",
    "pydantic==2.11.7",
    "pytest>=8.4.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "sentence-transformers==3.4.1",
    "streamlit==1.43.2",
    "torch==2.6.0",
    "watchdog>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
